--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   color: white;
 }
@@ -11,8 +10,8 @@ h1 {
   line-height: 65px;
   text-align: right;
   text-transform: uppercase;
-
   color: #ffffff;
+  margin-bottom: -15px;
 }
 
 h2 {
@@ -32,7 +31,6 @@ h2 {
   top: 263px;
 }
 
-
 .split {
   height: 100%;
   width: 50%;
@@ -49,18 +47,18 @@ h2 {
   mix-blend-mode: normal;
 }
 
+.right {
+  right: 0;
+  background: linear-gradient(180deg, #b6aacf 0%, #554478 100%);
+  mix-blend-mode: normal;
+}
+
 .mainPageLeft {
   position: absolute;
   width: 576px;
   height: 700px;
   left: 576px;
   top: 0px;
-}
-
-.right {
-  right: 0;
-  background: linear-gradient(180deg, #b6aacf 0%, #554478 100%);
-  mix-blend-mode: normal;
 }
 
 .centered {
@@ -70,17 +68,17 @@ h2 {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-.leftDog{
+.leftDog {
   position: absolute;
   width: 50%;
   height: 100%;
-  right:0px;
+  right: 0px;
 }
 .imageLeft {
-  width:100%; 
-  right:100%;
-  margin-right: -50%;
-  bottom: -40px
+  width: 100%;
+  right: 100%;
+  margin-right: -100%;
+  bottom: -40px;
 }
 
 .centered img {
@@ -100,4 +98,42 @@ h2 {
   position: absolute;
   top: -10px;
   right: -10px;
+}
+
+/* check-in page */
+
+.check-in {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow-x: hidden;
+  background: linear-gradient(180deg, #b6aacf 0%, #554478 100%);
+  mix-blend-mode: normal;
+}
+
+h2 {
+  font-family: "Encode Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: right;
+}
+
+.today {
+  position: absolute;
+  width: 529px;
+  height: 38px;
+  left: 410px;
+  top: 254px;
+}
+
+.question {
+  position: absolute;
+  width: 686px;
+  height: 61px;
+  left: 447px;
+  top: 305px;
 }
