--- a/style.css
+++ b/style.css
@@ -126,14 +126,34 @@ h2 {
   position: absolute;
   width: 529px;
   height: 38px;
-  left: 410px;
-  top: 254px;
+  left: calc(19% - 198px / 2 + 84px);
+  top: calc(30% - 92px / 2 + 34px);
 }
 
 .question {
   position: absolute;
   width: 686px;
   height: 61px;
-  left: 447px;
-  top: 305px;
+  left: calc(30% - 198px / 2 + 84px);
+  top: calc(35% - 92px / 2 + 34px);
+}
+
+.another {
+  position: fixed;
+  width: 198px;
+  height: 52px;
+  left: calc(50% - 198px / 2 + 84px);
+  top: calc(50% - 52px / 2 + 65px);
+  background: #7e6f9c;
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 12px rgba(94, 82, 117, 0.5);
+  border-radius: 35px;
+  font-family: Encode Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
 }
