--- a/style.css
+++ b/style.css
@@ -158,3 +158,37 @@ h2 {
   text-transform: uppercase;
   color: #ffffff;
 }
+
+/* Energizer page */
+
+.energizer-body {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow-x: hidden;
+  background: linear-gradient(180deg, #abd2d0 0%, #427d7a 100%);
+  mix-blend-mode: normal;
+}
+
+.generate-energizer-button {
+  position: fixed;
+  width: 198px;
+  height: 52px;
+  left: calc(50% - 198px / 2 + 84px);
+  top: calc(50% - 52px / 2 + 65px);
+  background: #9dc9c6;
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 12px rgba(116, 156, 154, 0.5);
+  border-radius: 35px;
+  border-radius: 35px;
+  font-family: Encode Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
