--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h2 {
   
 }
 
+
 .blob01 {
   position: absolute;
   width: 60%;
@@ -74,4 +75,8 @@ h2 {
   position: absolute;
   top: -10px;
   right: -10px;
+}
+
+.triangle_left {
+  margin-left: 220px;
 }
