--- a/style.css
+++ b/style.css
@@ -62,22 +62,28 @@ h2 {
 }
 .leftDog {
   position: absolute;
-  width: 50%;
-  height: 100%;
-  right: 0px;
-}
-.imageLeft {
   width: 100%;
-  right: 100%;
-  margin-right: -100%;
-  bottom: -40px;
+  height: 100%;
+  margin-left: 50%;
+  
 }
-
-.centered img {
-  width: 150px;
-  border-radius: 50%;
+#imageLeft {
+  position:absolute;
+  width: 100%;
+  bottom: 0px;
 }
-
+.rightDog {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin-left: -50%;
+  
+}
+#imageRight {
+  position:absolute;
+  width: 100%;
+  bottom: 0px;
+}
 
 .blob01 {
   position: absolute;
