--- a/style.css
+++ b/style.css
@@ -23,14 +23,6 @@ h2 {
   margin-bottom: 50px;
 }
 
-.main-header {
-  position: absolute;
-  width: 400px;
-  height: 59px;
-  left: 19px;
-  top: 263px;
-}
-
 .split {
   height: 100%;
   width: 50%;
@@ -53,13 +45,21 @@ h2 {
   mix-blend-mode: normal;
 }
 
-.centered {
+#leftBlock {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 35%;
   transform: translate(-50%, -50%);
-  
 }
+
+#rightBlock {
+  position: absolute;
+  top: 50%;
+  left: 65%;
+  transform: translate(-50%, -50%);
+}
+
+
 .leftDog {
   position: absolute;
   width: 100%;
