--- a/style.css
+++ b/style.css
@@ -53,14 +53,6 @@ h2 {
   mix-blend-mode: normal;
 }
 
-.mainPageLeft {
-  position: absolute;
-  width: 576px;
-  height: 700px;
-  left: 576px;
-  top: 0px;
-}
-
 .centered {
   position: absolute;
   top: 50%;
@@ -121,7 +113,7 @@ h2 {
   position: relative;
   width: 1100px;
   height: 1100px;
-  left: 40%;
+  left: 20%;
   top: 30%;
   align-self: center;
 }
@@ -141,8 +133,8 @@ h2 {
 
 .check-in-question-text {
   position: relative;
-  width: 529px;
-  height: 38px;
+  width: 800px;
+  height: 98px;
   margin-bottom: 20px;
   text-align: left;
   font-family: Nunito;
@@ -153,6 +145,7 @@ h2 {
   text-transform: uppercase;
   color: #ffffff;
   margin-top: 25px;
+  background-color: transparent;
 }
 
 .generate-checkIn-button {
@@ -168,7 +161,6 @@ h2 {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-
   text-transform: uppercase;
   color: #ffffff;
   margin-top: 30px;
