--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   color: white;
 }
-
 h1 {
   font-family: Nunito;
   font-style: normal;
@@ -12,7 +11,6 @@ h1 {
   color: #ffffff;
   margin-bottom: -15px;
 }
-
 h2 {
   font-family: "Encode Sans";
   font-style: normal;
@@ -22,7 +20,6 @@ h2 {
   line-height: 30px;
   margin-bottom: 50px;
 }
-
 .split {
   height: 100%;
   width: 50%;
@@ -32,33 +29,37 @@ h2 {
   overflow-x: hidden;
   overflow-y: hidden;
 }
-
 .left {
   left: 0;
   background: linear-gradient(180deg, #abd2d0 0%, #427d7a 100%);
   mix-blend-mode: normal;
 }
-
 .right {
   right: 0;
   background: linear-gradient(180deg, #b6aacf 0%, #554478 100%);
   mix-blend-mode: normal;
 }
-
+#centerBlock {
+  position: fixed;
+  margin-left: 49.3%;
+  width: 8px;
+  height: 100%;
+  top: 0px;
+  z-index: 2;
+  background: #fbfafa;
+}
 #leftBlock {
   position: absolute;
   top: 50%;
   left: 35%;
   transform: translate(-50%, -50%);
 }
-
 #rightBlock {
   position: absolute;
   top: 50%;
   left: 65%;
   transform: translate(-50%, -50%);
 }
-
 .leftDog {
   position: absolute;
   width: 100%;
@@ -81,21 +82,18 @@ h2 {
   width: 100%;
   bottom: 0px;
 }
-
 .blob01 {
   position: absolute;
   width: 60%;
   left: -70px;
   bottom: -40px;
 }
-
 .blob02 {
   width: 60%;
   position: absolute;
   top: -10px;
   right: -10px;
 }
-
 .triangle_left {
   margin-left: 220px;
 }
