--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ margin-top:30px;
   margin-top: 40px;
 }
 
+.filter_icon {
+  margin-top: 40px;
+}
+
 /* ----------- Energizer page -----------*/
 
 .energizer-body {
