--- a/style.css
+++ b/style.css
@@ -120,18 +120,21 @@ h2 {
 .button_back {
 margin-left:30px;
 margin-top:30px;
+z-index: 3;
 }
 
 .checkinDog{
   position: absolute;
   width: 50%;
   height: 100%;
-  margin-left: -10%;
+  margin-left: -6%;
+  margin-top:10px;
   z-index: 1;
 }
+
 #imageCheckin {
   position: absolute;
-  width: 100%;
+  width: 90%;
   bottom: 0px;
 }
 
@@ -149,36 +152,33 @@ margin-top:30px;
 
 .check-in-page-parent {
   position: relative;
-  width: 1100px;
-  height: 1100px;
-  left: 45%;
+  width: 50%;
+  left: 40%;
   top: 20%;
+  right: 20%;
   align-self: center;
   z-index: 2;
 }
 
 .present-question-text {
+  width: 100%;
   position: relative;
-  width: 529px;
-  height: 38px;
   margin-bottom: 10px;
   font-family: "Encode Sans";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  text-align: left;
+  font-size: 30px;
+  text-align: center;
   margin-top: 30px;
 }
 
 .check-in-question-text {
   position: relative;
-  width: 70%;
-  text-align: left;
+  width: 100%;
+  text-align: center;
   font-family: Nunito;
-  font-style: normal;
   font-weight: bold;
   font-size: 48px;
-  text-align: left;
   color: #ffffff;
   margin-top: 15px;
   background-color: transparent;
@@ -186,8 +186,6 @@ margin-top:30px;
 
 .generate-checkIn-button {
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
   width: 198px;
   height: 52px;
   background: #7e6f9c;
@@ -202,10 +200,13 @@ margin-top:30px;
   text-transform: uppercase;
   color: #ffffff;
   margin-top: 40px;
+left: 50%;
+transform: translate(-50%, -50%);
 }
 
 .filter_icon {
-  margin-top: 40px;
+  margin-top: 10px;
+
 }
 
 /* ----------- Energizer page -----------*/
