--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ h2 {
   background: #fbfafa;
 }
 
-
 #leftBlock {
   position: absolute;
   top: 50%;
@@ -70,16 +69,14 @@ h2 {
   transform: translate(-50%, -50%);
 }
 
-
 .leftDog {
   position: absolute;
   width: 100%;
   height: 100%;
   margin-left: 50%;
-  
 }
 #imageLeft {
-  position:absolute;
+  position: absolute;
   width: 100%;
   bottom: 0px;
 }
@@ -88,10 +85,9 @@ h2 {
   width: 100%;
   height: 100%;
   margin-left: -50%;
-  
 }
 #imageRight {
-  position:absolute;
+  position: absolute;
   width: 100%;
   bottom: 0px;
 }
@@ -118,17 +114,17 @@ h2 {
   width: 40%;
 }
 .button_back {
-margin-left:30px;
-margin-top:30px;
-z-index: 3;
+  margin-left: 30px;
+  margin-top: 30px;
+  z-index: 3;
 }
 
-.checkinDog{
+.checkinDog {
   position: absolute;
   width: 50%;
   height: 100%;
   margin-left: -6%;
-  margin-top:10px;
+  margin-top: 10px;
   z-index: 1;
 }
 
@@ -200,13 +196,14 @@ z-index: 3;
   text-transform: uppercase;
   color: #ffffff;
   margin-top: 40px;
-left: 50%;
-transform: translate(-50%, -50%);
+  position: absolute;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
 }
 
 .filter_icon {
   margin-top: 10px;
-
 }
 
 .modal-content {
@@ -234,16 +231,13 @@ ul {
 
 .checkbox {
   cursor: pointer;
-  position: relative;
-  width: 529px;
-  height: 38px;
-  margin-bottom: 10px;
+}
+
+.filter-text {
   font-family: "Encode Sans";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  text-align: left;
-  margin-top: 30px;
+  font-size: 12px;
 }
 
 /* ----------- Energizer page -----------*/
