--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ h2 {
   margin-bottom: 50px;
 }
 
+h3 {
+  font-family: "Encode Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+}
+
 .split {
   height: 100%;
   width: 50%;
@@ -116,7 +123,6 @@ h2 {
 .button_back {
   margin-left: 30px;
   margin-top: 30px;
-  z-index: 3;
 }
 
 .checkinDog {
@@ -125,7 +131,6 @@ h2 {
   height: 100%;
   margin-left: -6%;
   margin-top: 10px;
-  z-index: 1;
   overflow: hidden;
 }
 
@@ -161,10 +166,7 @@ h2 {
   width: 100%;
   position: relative;
   margin-bottom: 10px;
-  font-family: "Encode Sans";
-  font-style: normal;
   font-weight: 500;
-  font-size: 30px;
   text-align: center;
   margin-top: 30px;
 }
@@ -203,25 +205,7 @@ h2 {
   transform: translate(-50%, -50%);
 }
 
-.filter_icon {
-  margin-top: 10px;
-}
 
-.modal-content {
-  height: fit-content;
-  width: auto;
-  background-color: #2434a9;
-  border-radius: 40px;
-  padding: 25px;
-  position: absolute;
-  top: 50%;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  left: 50%;
-  margin: auto;
-  transform: translate(-50%, -50%);
-}
 
 ul {
   text-align: left;
@@ -241,6 +225,18 @@ ul {
   font-size: 12px;
 }
 
+#filterbutton{
+  background-color: #ffffff00;
+  margin-top: 80px;
+  border: 0px 
+}
+
+/* ------------Modal---------------*/
+.modal{
+  display:none;
+  position: fixed;
+  z-index: 1;
+}
 /* ----------- Energizer page -----------*/
 
 .energizer-body {
