--- a/style.css
+++ b/style.css
@@ -247,18 +247,40 @@ ul {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
 }
 
 /* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+
+#savebutton {
+position: relative;
+cursor: pointer;
+width: 169px;
+height: 52px;
+background: #4A3C67;
+border: 3px solid #4A3C67;
+box-sizing: border-box;
+box-shadow: 0px 8px 10px rgba(74, 60, 103, 0.2);
+border-radius: 35px;
+font-family: Encode Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-top: 40px;
+  position: absolute;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
 }
 
+.filter_header {
+  margin-top:50px;
+  text-align: center;
+}
 /* The Close Button */
 .close {
   color: #aaa;
@@ -273,36 +295,20 @@ ul {
   text-decoration: none;
   cursor: pointer;
 }
-/* Modal Header */
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-/* Modal Body */
-.modal-body {
-  padding: 2px 16px;
-}
-
-/* Modal Footer */
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
 
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
   margin: auto;
   padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 444px;
+  height: 376px;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 12px rgba(65, 58, 80, 0.5);
+  border-radius: 30px;
   animation-name: animatetop;
   animation-duration: 0.4s;
+  color: #4A3C67;
 }
 
 /* Add Animation */
