--- a/style.css
+++ b/style.css
@@ -214,28 +214,15 @@ h3 {
   margin-top: 10px;
 }
 
-ul {
-  text-align: left;
-  padding-right: 20px;
-  font-weight: 400;
-  padding-bottom: 15px;
-}
-
-.checkbox {
-  cursor: pointer;
-}
-
-.filter-text {
-  font-family: "Encode Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-}
 #myBtn {
   background-color: #ffffff00;
   margin-top: 80px;
+  border: 0px;
 }
-
+#myBtn:hover,
+#nyBtn:focus {
+  cursor: pointer;
+}
 /* ------------Modal---------------*/
 /* The Modal (background) */
 .modal {
@@ -270,7 +257,7 @@ font-family: Encode Sans;
   font-size: 20px;
   text-transform: uppercase;
   color: #ffffff;
-  margin-top: 40px;
+  margin-top: -10px;
   position: absolute;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -278,15 +265,19 @@ font-family: Encode Sans;
 }
 
 .filter_header {
-  margin-top:50px;
+  position:relative;
+  margin-top: 20px;
   text-align: center;
 }
 /* The Close Button */
 .close {
-  color: #aaa;
+  font-family: Nunito;
+  color:#4A3C67;
   float: right;
-  font-size: 28px;
+  font-size: 34px;
   font-weight: bold;
+  margin-top: 20px;
+  margin-right: 30px;
 }
 
 .close:hover,
@@ -302,16 +293,78 @@ font-family: Encode Sans;
   margin: auto;
   padding: 0;
   width: 444px;
-  height: 376px;
+  height: 444px;
   background: #FFFFFF;
   box-shadow: 0px 10px 12px rgba(65, 58, 80, 0.5);
   border-radius: 30px;
   animation-name: animatetop;
   animation-duration: 0.4s;
   color: #4A3C67;
+  margin-top: 20%;
 }
 
-/* Add Animation */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 32px;
+  width: 32px;
+  background-color: white;
+  border: 3px solid #4A3C67;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #4A3C67;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #4A3C67;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 12px;
+	left: 12px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
 @keyframes animatetop {
   from {
     top: -300px;
