--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ h3 {
 .triangle_left {
   margin-left: 220px;
 }
+
 /* -------------- Check-in page -------------*/
 #check-in {
   width: 40%;
@@ -335,9 +336,10 @@ ul {
   position: relative;
   width: 1100px;
   height: 1100px;
-  left: 25%;
   top: 10%;
-  align-self: center;
+  margin-bottom: 30px;
+  left: 25%;
+  /* set dynamic */
 }
 
 .generate-energizer-button {
@@ -365,15 +367,26 @@ ul {
 .body-text-holder {
   position: static;
   width: 100vh;
-  height: 100vh;
   border-radius: 30px;
   background-color: white;
+}
+
+.body-text {
+  font-family: Encode Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 140%;
+  color: #2a4443;
+  padding: 100px;
+  padding-right: 150px;
+  line-height: 240%;
 }
 
 /* text-fields */
 .display-energizer {
   position: relative;
-  width: 529px;
+  width: 1000px;
   height: 38px;
   margin-bottom: 20px;
   text-align: left;
