--- a/style.css
+++ b/style.css
@@ -264,11 +264,7 @@ font-family: Encode Sans;
   transform: translate(-50%, -50%);
 }
 
-.filter_header {
-  position:relative;
-  margin-top: 20px;
-  text-align: center;
-}
+
 /* The Close Button */
 .close {
   font-family: Nunito;
@@ -276,8 +272,7 @@ font-family: Encode Sans;
   float: right;
   font-size: 34px;
   font-weight: bold;
-  margin-top: 20px;
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 .close:hover,
@@ -289,20 +284,30 @@ font-family: Encode Sans;
 
 /* Modal Content */
 .modal-content {
+  background: #FFFFFF;
   position: relative;
-  margin: auto;
-  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  margin: 30px 30px 0px 30px;
   width: 444px;
   height: 444px;
-  background: #FFFFFF;
+  overflow: hidden;
   box-shadow: 0px 10px 12px rgba(65, 58, 80, 0.5);
   border-radius: 30px;
   animation-name: animatetop;
   animation-duration: 0.4s;
   color: #4A3C67;
-  margin-top: 20%;
 }
 
+.filter_header {
+  text-align: center;
+}
+
+.filter_body {
+margin-left: 40px;
+}
 .container {
   display: block;
   position: relative;
