--- a/style.css
+++ b/style.css
@@ -264,6 +264,10 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
+#savebutton:active {
+  background: #29213A;
+  border: 3px solid #29213A;
+}
 .filter_header {
   position: relative;
   margin-top: 20px;
