--- a/style.css
+++ b/style.css
@@ -447,11 +447,12 @@ h5 {
 /* parent */
 .energizer-content-holder {
   position: relative;
-  width: 1100px;
-  height: 1100px;
+  width: 70%;
+  height: 100%;
   top: 5%;
-  margin-bottom: 30px;
-  left: 25%;
+  margin-bottom: 50px;
+  left: 15%;
+  overflow: visible;
   /* set dynamic */
 }
 
@@ -487,7 +488,7 @@ h5 {
 
 .body-text-holder {
   position: static;
-  width: 100vh;
+  width: 100%;
   border-radius: 30px;
   background-color: white;
 }
@@ -497,10 +498,9 @@ h5 {
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  line-height: 140%;
   color: #2a4443;
   padding: 100px;
-  padding-right: 150px;
+  padding-right: 200px;
   line-height: 240%;
 }
 
