--- a/style.css
+++ b/style.css
@@ -166,6 +166,11 @@ font-family: Encode Sans;
 }
 
 /* -------------- Check-in page -------------*/
+.chekin_body {
+height: 100%;
+width: 100%;
+}
+
 #check-in {
   width: 40%;
 }
@@ -475,7 +480,7 @@ font-family: Encode Sans;
   position: relative;
   width: 70%;
   top: 5%;
-  margin-bottom: 200px;
+  margin-bottom: 80px;
   left: 15%;
   overflow: visible;
   
@@ -566,14 +571,34 @@ font-family: Encode Sans;
 }
 
 #footer {
-  position: absolute;
-  bottom: 15px;
-  width: 100%;
-  height: 2.5rem;            /* Footer height */
-  font-family: "Encode Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  text-align: center;
-  overflow: hidden;
-}
+    position: relative;
+    left: 0;
+    bottom: 0;
+    margin-top: 40px;
+    width: 100%;
+    font-family: Encode Sans;
+    color: white;
+    text-align: center;
+    height: 38px;
+  }
+
+  #linkedin:link {
+    color: white;
+    text-decoration: none;
+  }
+
+  #linkedin:visited {
+    color: white;
+    text-decoration: none;
+  }
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-family: Encode Sans;
+    color: white;
+    text-align: center;
+    height: 60px;
+  }
